# rom-res-rs

./: .gitignore  Cargo.toml  README.md
basic-examples/: Cargo.toml
basic-examples/examples/: alm_exploration.rs  data_bin_exploration.rs  print_save_file_hex.rs
examples/: data_bin_exploration.rs  draw_256.rs  draw_bmp.rs  hex_print_utils.rs  play_music.rs  play_music_with_menu.rs  play_smacker_file.rs  play_smacker_golem.rs  play_smacker_miniquad.rs  print_data_bin.rs  print_game_text_content.rs  print_regfile_hex.rs  print_save_file_hex.rs  print_smacker_file_info.rs  print_wav_file_content.rs  read_pal_hex.rs  read_regfile_and_list_content.rs  read_resource_and_list_files.rs  read_resource_file_and_list_content.rs
src/: cp866.rs  enumerations.rs  lib.rs  repr.rs  resource_file.rs
