[package]
name = "rom-res-rs"
version = "0.1.5"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cp866-rs = { git = "https://github.com/madwareru/cp866-rs", version = "0.1.2"}
bin-serialization-rs = { git = "https://github.com/madwareru/bin-serialization-rs", version = "0.1"}

[dev-dependencies]
png = "0.16.8"
print-hex-rs = { git = "https://github.com/madwareru/print-hex-rs", version = "0.1.0" }
rom-media-rs = { git = "https://github.com/madwareru/rom-media-rs", version = "0.6.17" }
rom-loaders-rs = { git = "https://github.com/madwareru/rom-loaders-rs", version = "0.4.25"}
miniquad = "0.3.0-alpha.30"
macroquad = "0.3.0-alpha.14"
megaui-macroquad = "0.1.1"
golem = "0.1.7"
blinds = { version = "0.1.0", default-features = false, features = ["gl"] }
bytemuck = "1.4.1"