[package]
name = "rom-res-rs"
version = "0.1.6"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cp866-rs = { git = "https://github.com/madwareru/cp866-rs", version = "0.1.2"}
bin-serialization-rs = { git = "https://github.com/madwareru/bin-serialization-rs", version = "0.1"}

[dev-dependencies]
png = "0.16.8"
print-hex-rs = { git = "https://github.com/madwareru/print-hex-rs", version = "0.1.0" }
rom-media-rs = { git = "https://github.com/madwareru/rom-media-rs", version = "0.6.19" }
rom-loaders-rs = { git = "https://github.com/madwareru/rom-loaders-rs", version = "0.4.26"}
miniquad = "0.3.0-alpha.30"
bytemuck = "1.4.1"