[package]
name = "basic-examples"
version = "0.1.0"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rom-res-rs = { path = ".."}
print-hex-rs = { git = "https://github.com/madwareru/print-hex-rs", version = "0.1.0"}
rom-media-rs = { git = "https://github.com/madwareru/rom-media-rs", version = "0.6.25"}
rom-loaders-rs = { git = "https://github.com/madwareru/rom-loaders-rs", version = "0.4.28"}
